--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - QRXpress</title>
   <link rel="icon" href="assets/icon.ico" type="image/x-icon">
   <link rel="stylesheet" href="lib/style.css">
 </head>
+
 <body>
   <div class="container">
     <div class="logo">
@@ -14,7 +16,9 @@
     </div>
 
     <h1>Privacy Policy</h1>
-    <p><strong>QRXpress</strong> is committed to protect your privacy. This application does <strong>not collect, store, or share any personal information</strong> from users. All features are designed to function without gathering any data from you.</p>
+    <p><strong>QRXpress</strong> is committed to protecting your privacy. This application collects minimal data
+      necessary for app functionality and improving user experience. All features are designed to work with as little
+      data as possible.</p>
 
     <h2>1. Permissions Used</h2>
     <p>QRXpress requires the following permissions:</p>
@@ -22,25 +26,48 @@
       <li><strong>Camera:</strong> To scan QR codes and barcodes using your device's camera.</li>
       <li><strong>Gallery:</strong> To pick an image from your device to scan QR codes or barcodes from an image.</li>
     </ul>
-    <p>These permissions are used solely for their stated purpose and no data is transmitted or stored remotely.</p>
+    <p>These permissions are used solely for their stated purpose. Photos and images selected by the user remain on the
+      device and are not uploaded or shared.</p>
 
-    <h2>2. Local Data Storage</h2>
-    <p>The app stores your scan history and generated QR codes locally on your device. <strong>No data is uploaded to any server or external system.</strong> You have full control over your data.</p>
+    <h2>2. Data Collection</h2>
+    <p>QRXpress uses third-party services to improve app stability and performance:</p>
+    <ul>
+      <li><strong>Firebase Analytics:</strong> Collects anonymized usage data and device identifiers to help us
+        understand app usage and improve features.</li>
+      <li><strong>Firebase Crashlytics:</strong> Collects crash logs and diagnostic information to help us fix bugs and
+        improve app reliability.</li>
+      <li><strong>Firebase Performance Monitoring:</strong> Tracks app performance data (e.g., network latency and
+        screen rendering performance) to ensure a smooth user experience.</li>
+    </ul>
+    <p>This data is processed by Google Firebase and is encrypted in transit. It does not include personal content such
+      as photos, videos, or files.</p>
 
-    <h2>3. No Data Collection</h2>
-    <p>We do not collect, monitor, or transmit any user data. QRXpress functions entirely offline, apart from system-level permissions used for functionality.</p>
+    <h2>3. Data Storage and Sharing</h2>
+    <p>We do not sell or share user data with third parties. All QR code scan history and generated QR codes are stored
+      <strong>locally on your device</strong>. You have full control over this data and can clear it at any time.</p>
+
+    <h2>4. User Rights</h2>
+    <p>You can request deletion of analytics and crash log data collected by Firebase by contacting us at the email
+      below.</p>
+
+    <h2>5. Contact</h2>
+    <p>If you have any questions or concerns about your privacy, please contact us at:</p>
+    <p><strong>Email:</strong> <a href="mailto:verustechnico@gmail.com">verustechnico@gmail.com</a></p>
 
     <h2>4. Contact</h2>
-    <p>If you have any questions or concerns about <strong>QRXpress</strong>, feel free to contact us at: <a href="mailto:verustechnico@gmail.com">verustechnico@gmail.com</a></p>
+    <p>If you have any questions or concerns about <strong>QRXpress</strong>, feel free to contact us at: <a
+        href="mailto:verustechnico@gmail.com">verustechnico@gmail.com</a></p>
+
   </div>
 
   <footer>
-  &copy; <span id="year"></span> QRXpress. All rights reserved.
+    &copy; <span id="year"></span> QRXpress. All rights reserved.
   </footer>
 
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 
 </body>
+
 </html>
